--- a/ECommerce.UI/Views/Shared/_AdminLayoutSideBar.cshtml
+++ b/ECommerce.UI/Views/Shared/_AdminLayoutSideBar.cshtml
@@ -218,17 +218,17 @@
                             <span class="menu-icon">
                                 <i class="@application.ApplicationIcon"></i>
                             </span>
-                            <span class="menu-title">@application.ApplicationName</span>
+                            <span class="menu-@application.ApplicationValue">@application.ApplicationName</span>
                             <i class="menu-arrow"></i>
                         </a>
                     }
                     else
                     {
-                        <a class="nav-link" data-toggle="collapse" href="#sedat" aria-expanded="false" aria-controls="sedat">
+                        <a class="nav-link" data-toggle="collapse" href="#@application.ApplicationValue" aria-expanded="false" aria-controls="#@application.ApplicationValue">
                             <span class="menu-icon">
                                 <i class="@application.ApplicationIcon"></i>
                             </span>
-                            <span class="menu-title">@application.ApplicationName</span>
+                            <span class="menu-@application.ApplicationValue">@application.ApplicationName</span>
                             <i class="menu-arrow"></i>
                         </a>
                     }
