--- a/ECommerce.UI/wwwroot/AdminTemplate/template/pages/samples/login.html
+++ b/ECommerce.UI/wwwroot/AdminTemplate/template/pages/samples/login.html
@@ -45,12 +45,12 @@
                   <div class="text-center">
                     <button type="submit" class="btn btn-primary btn-block enter-btn">Login</button>
                   </div>
-                  <div class="d-flex">
+                  <!--<div class="d-flex">
                     <button class="btn btn-facebook mr-2 col">
                       <i class="mdi mdi-facebook"></i> Facebook </button>
                     <button class="btn btn-google col">
                       <i class="mdi mdi-google-plus"></i> Google plus </button>
-                  </div>
+                  </div>-->
                   <p class="sign-up">Don't have an Account?<a href="#"> Sign Up</a></p>
                 </form>
               </div>
